--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 </div>
             </div>
         </div>
-    <script src="includes/basic007.min.js?v=20191121"></script>
+    <script src="basic007.min.js?v=20191121"></script>
 </body>
 
 </html>
